code format; type safety